@@ -12,10 +12,11 @@ not an invitation to misrepresent who contributed to GNU GParted.
 We need to keep track of copyright (see the Maintainer HOWTO on www.gnu.org).
 
 Curtis Gedak		<gedakc@users.sourceforge.net>
+	* Created ext4.h, ext4.cc to support ext4 file systems
 	* Created FS_Info.h, FS_Info.cc
 	* Rewrote read_label functionality for hfs
 	* Wrote create, read_label, and check_repair functionality for hfs+
-	* Wrote read_label functionality for fat16 and fat32 filesystems  
+	* Wrote read_label functionality for fat16 and fat32 file systems  
 	* Wrote following Utils:: methods:
 		regexp_label(), fat_compliant_label(),
 		create_mtoolsrc_file(), delete_mtoolsrc_file,
