@@ -43,6 +43,7 @@ gpartedbin_SOURCES = \
 	Win_GParted.cc			\
 	ext2.cc				\
 	ext3.cc				\
+	ext4.cc				\
 	fat16.cc			\
 	fat32.cc			\
 	hfs.cc				\
