@@ -1,5 +1,11 @@
 2008-12-18  Curtis Gedak  <gedakc@gmail.com>
 
+	* include/ext4.h,
+	  include/Makefile.am,
+	  src/ext4.cc,
+	  src/Makefile.am: Created 2 files to support ext4 operations.
+	  - Support for ext4 is planned for version 2.6.28 of the Linux kernel.
+
 	* include/FS_Info.h,
 	  src/FS_Info.cc: Added get_fs_type() method
 
